fix: Fix code style (#6)

--- a/source/layout/blocks/footer/footer.njk
+++ b/source/layout/blocks/footer/footer.njk
@@ -1,9 +1,9 @@
 <footer class="footer">
-    <div class="footer__container">
-        <div class="footer__row">
-            <div class="footer__logo">
-                {% include 'blocks/footer/blocks/copyright/copyright.njk' %}
-            </div>
-        </div>
+  <div class="footer__container">
+    <div class="footer__row">
+      <div class="footer__logo">
+        {% include 'blocks/footer/blocks/copyright/copyright.njk' -%}
+      </div>
     </div>
+  </div>
 </footer>
