--- a/source/layout/core/blocks/browser_theme.njk
+++ b/source/layout/core/blocks/browser_theme.njk
@@ -1,10 +1,6 @@
-{#-
-    @param {string} themeColor required
--#}
-
 {#- Chrome, Firefox OS and Opera -#}
-<meta name="theme-color" content="{{- themeColor -}}">
+<meta name="theme-color" content="{{ themeColor }}">
 {#- Windows Phone -#}
-<meta name="msapplication-navbutton-color" content="{{- themeColor -}}">
+<meta name="msapplication-navbutton-color" content="{{ themeColor }}">
 {#- iOS Safari -#}
-<meta name="apple-mobile-web-app-status-bar-style" content="{{- themeColor -}}">
+<meta name="apple-mobile-web-app-status-bar-style" content="{{ themeColor }}">
