--- a/source/layout/core/blocks/metatags.njk
+++ b/source/layout/core/blocks/metatags.njk
@@ -1,3 +1,3 @@
-<title>{{- pageTitle }} | {{ projectTitle -}}</title>
+<title>{{ pageTitle }} | {{ projectTitle }}</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
