--- a/source/layout/blocks/main/blocks/whom/whom.njk
+++ b/source/layout/blocks/main/blocks/whom/whom.njk
@@ -3,7 +3,7 @@
         <div class="whom__content">
             <div class="whom__block">
                 <div class="whom__text">
-                    <h3>For whom ?</h3>
+                    <h3>MasterShot was created for:</h3>
                     <ul>
                         <li><img src="images/Line.svg" alt=""> Directors</li>
                         <li><img src="images/Line.svg" alt=""> Producers</li>
