--- a/source/layout/core/base.njk
+++ b/source/layout/core/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk" dir="ltr" {% block ogHtmlAttr %}{% endblock %}>
+<html lang="en" dir="ltr" {% block ogHtmlAttr %}{% endblock %}>
 
 <head>
   <meta charset="utf-8">
