--- a/source/layout/core/blocks/favicons.njk
+++ b/source/layout/core/blocks/favicons.njk
@@ -1,5 +1,5 @@
-<meta name="apple-mobile-web-app-title" content="KRI Starterkit">
-<meta name="application-name" content="KRI Starterkit">
+<meta name="apple-mobile-web-app-title" content="">
+<meta name="application-name" content="">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-config" content="browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
@@ -9,3 +9,4 @@
 <link rel="manifest" href="site.webmanifest">
 <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#000000">
 <link rel="shortcut icon" href="favicon.ico">
+
