--- a/source/layout/blocks/header/header.scss
+++ b/source/layout/blocks/header/header.scss
@@ -8,7 +8,7 @@
 
   &__row {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     flex-direction: row;
     align-items: center;
     @include lg {
