--- a/source/layout/blocks/main/blocks/price/price.njk
+++ b/source/layout/blocks/main/blocks/price/price.njk
@@ -29,7 +29,7 @@
                             <li><img src="images/icon/blue/4.svg" alt=""> Custom branding</li>
                         </ul>
                     </div>
-                    <button class="price__button_blue"><a href="https://app.mastershot.io/auth/login">Buy</a></button>
+                    <button class="price__button_blue"><a href="https://app.mastershot.io/auth/login">Try free</a></button>
                 </div>
                 <div class="price__cards_card">
                     <h2>Indie</h2>
@@ -43,7 +43,7 @@
                             <li><img src="images/icon/inactive/4.svg" alt=""> Custom branding</li>
                         </ul>
                     </div>
-                    <button class="price__button_standart"><a href="https://app.mastershot.io/auth/login">Buy</a></button>
+                    <button class="price__button_standart"><a href="https://app.mastershot.io/auth/login">Try free</a></button>
                 </div>
             </div>
         </div>
